virtualservice/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: whereami
  namespace: whereami
spec:
  hosts:
  - whereami.miguelmendoza.demo.altostrat.com
  - whereami.alexmattson.demo.altostrat.com
  - whereami-1.alexmattson.demo.altostrat.com
  - whereami-2.alexmattson.demo.altostrat.com
  gateways:
  - asm-ingress/whereami-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: whereami
        port:
          number: 80
